# jellyfren

./: .dir-locals.el  .eslintrc.json  README.md  README.org  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.vue  cacheable.ts  colorscheme.ts  main.ts  preferences.ts  song-info.ts  song.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: AlbumCard.vue  AlbumItem.vue  AlbumList.vue  ArtistCard.vue  AudioController.vue  Card.vue  Greet.vue  LibraryItem.vue  LoadingSpinner.vue  Navigation.vue  ProgressSlider.vue  Sidebar.vue  SongItem.vue  SongList.vue
src/jellyfin/: Home.vue  authentication-result.ts  client.ts  credentials.ts  session-info.ts  user-dto.ts
src/router/: index.ts
src/store/: actions.ts  cache.ts  getters.ts  index.ts  jellyfin-state.ts  jellyfin.ts  mutations.ts  root.ts  settings.ts  types.ts
src/store/modules/jellyfin/: actions.ts  getters.ts  index.ts  jellyfin-state.ts  mutations.ts
src/store/modules/player/: index.ts  player-state.ts
src/store/modules/settings/: index.ts  settings-state.ts
src/views/: Dashboard.vue  Home.vue  Library.vue  LibraryNew.vue  Login.vue  NowPlaying.vue  Playlists.vue  SongList.vue
