[package]
name = "jellyfren"
version = "0.0.0"
description = "Jellyfin music client"
authors = ["HumanoidSandvichDispenser"]
license = "GPLv3"
repository = "https://github.com/humanoidsandvichdispenser/jellyfren"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["shell-open"] }

[dependencies.tauri-plugin-store]
git = "https://github.com/tauri-apps/tauri-plugin-store"
#tag = "v0.1.0"
#branch = "main"

[patch.crates-io]
wry = { git = "https://github.com/tauri-apps/wry", branch = "autoplay-0.19" }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
